Update to gateway hostname

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             <a class="nav-link" (click)="cqrs()">CQRS</a>
           </li>
           <li class="nav-item"  [class.active]="router.url==='/page4'">
-              <a class="nav-link" (click)="api()">API Gateway</a>
+              <a class="nav-link" (click)="api()">Kafka</a>
             </li>
 
 
