--- a/src/app/page3/page3.component.html
+++ b/src/app/page3/page3.component.html
@@ -1,9 +1,13 @@
 <main role="main" class="container">
 
   <div class="starter-template">
-    <h1>Page3</h1>
-    <p class="lead">CQRS</p>
-    <img src="../../assets/cqrs.png" width="50%">
+
+    <img src="../../assets/cqrs.png" width="500px" style="float: left">
+    <div  class="presentation pres-left" >
+      <p>Command Query Responsibility Segregation</p>
+      <p>Different model to update information than the model you use to read information</p>
+
+    </div>
     <div class="subFooter" >
         <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
     </div>
