--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -1,9 +1,14 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-      <h1>Page4</h1>
-      <p class="lead">API Gateway</p>
-      <img src="../../assets/api.png" width="50%">
+
+
+      <img src="../../assets/apache-kafka.png" width="30%" style="float:left">
+      <div  class="presentation pres-left" >
+        <h2>Kafka</h2>
+        <p>Started with REST, Kafka gives much more stable backbone.</p>
+
+        </div>
     </div>
 
   </main><!-- /.container -->
