--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -1,12 +1,29 @@
-<main role="main" class="container">
+
 
   <div class="starter-template">
-    <h1>Page1</h1>
-    <p class="lead">Core Engine</p>
-    <img src="../../assets/core.jpg" width="50%">
+      <div  >
+
+
+
+          <div>
+            <img src="../../assets/core.png" height="400px" style="float:left;">
+            <div class="presentation pres-left" height="500px;">
+              <h2 >Core engine</h2>
+              <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.</h4>
+              <ul >
+                <li>Built using hexagonal architecture</li>
+                <li>Easy to adapt new integrations, easily add new pieces</li>
+                <li>Reactive, using RESTful, Kafka makes it easy</li>
+                  <li>Additional channels could be brought online</li>
+                </ul>
+            </div>
+          </div>
+
+        </div>
+
     <div class="subFooter" >
         <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
     </div>
     </div>
 
-</main><!-- /.container -->
+
