--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -1,13 +1,32 @@
-<main role="main" class="container">
+
 
   <div class="starter-template">
-    <h1>Page2</h1>
-    <p class="lead">Twitter Engine</p>
-    <img src="../../assets/twitter_api.png" width="50%">
+      <div >
+
+
+
+          <div>
+            <img src="../../assets/core.png" height="400px" style="float:left;">
+            <div  class="presentation pres-left" >
+              <h2 >Twitter engine</h2>
+              <h4 >Twitter is a domain, a technical space</h4>
+              <p>Additional domains can be brought online independently</p>
+              <ul>
+                <li>Slack</li>
+                <li>Google Chat</li>
+                <li>LinkedIn</li>
+                <li>Skype</li>
+
+              </ul >
+                <p>If we had the luxury of more time, we'd bring another channel on live during the demo</p>
+            </div>
+          </div>
+
+        </div>
+
     <div class="subFooter" >
         <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
     </div>
-  </div>
+    </div>
 
 
-</main><!-- /.container -->
