--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,13 @@
 
 
 
-  <div>
-    <img src="../../assets/shakespeare.png" height="500px" style="float:left;">
-    <div style="float:left; padding:10px;" height="500px;"  class="presentation">
-      <h2 >Shakespeare Schwarzenegger</h2>
+    <div class="row ">
+      <div class="col">
+    <img src="../../assets/shakespeare.png" height="500px">
+      </div>
+      <div class="col">
+    <div  class="presentation">
+      <h2 >Shakespeare Schwarzenegger Hamilton</h2>
       <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.<br>This makes them easier to develop and amenable to change</h4>
       <ul >
         <li>Responsive</li>
@@ -17,6 +20,7 @@
           <li>Cost reduction</li>
           <li>Better Systems for Customers</li>
         </ul>
+        </div>
     </div>
   </div>
 
