--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -5,9 +5,12 @@
 
 
 
-          <div>
-            <img src="../../assets/core.png" height="400px" style="float:left;">
-            <div class="presentation pres-left" height="500px;">
+          <div class="row">
+            <div class="col">
+            <img src="../../assets/core.png" height="400px" >
+          </div>
+          <div class="col">
+            <div class="presentation " >
               <h2 >Core engine</h2>
               <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.</h4>
               <ul >
@@ -17,6 +20,7 @@
                   <li>Additional channels could be brought online</li>
                 </ul>
             </div>
+          </div>
           </div>
 
         </div>
