--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -5,9 +5,12 @@
 
 
 
-          <div>
-            <img src="../../assets/core.png" height="400px" style="float:left;">
-            <div  class="presentation pres-left" >
+          <div class="row">
+            <div class="col">
+
+                      <img src="../../assets/core.png" height="400px" style="float:left;">
+                    </div>
+            <div  class="col presentation" >
               <h2 >Twitter engine</h2>
               <h4 >Twitter is a domain, a technical space</h4>
               <p>Additional domains can be brought online independently</p>
@@ -21,6 +24,7 @@
                 <p>If we had the luxury of more time, we'd bring another channel on live during the demo</p>
             </div>
           </div>
+
 
         </div>
 
