--- a/src/app/page3/page3.component.html
+++ b/src/app/page3/page3.component.html
@@ -1,17 +1,22 @@
-<main role="main" class="container">
+<div class="starter-template">
+    <div >
 
-  <div class="starter-template">
 
-    <img src="../../assets/cqrs.png" width="500px" style="float: left">
-    <div  class="presentation pres-left" >
+
+        <div class="row">
+          <div class="col">
+
+    <img src="../../assets/cqrs.png" width="500px">
+    </div>
+    <div class="col">
+    <div  class="presentation " >
       <p>Command Query Responsibility Segregation</p>
       <p>Different model to update information than the model you use to read information</p>
 
+    </div>
     </div>
     <div class="subFooter" >
         <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
     </div>
   </div>
 
-
-</main><!-- /.container -->
