--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -1,14 +1,21 @@
-<main role="main" class="container">
+<div class="starter-template">
+    <div >
 
-    <div class="starter-template">
 
 
-      <img src="../../assets/apache-kafka.png" width="30%" style="float:left">
-      <div  class="presentation pres-left" >
+        <div class="row">
+          <div class="col">
+
+      <img src="../../assets/apache-kafka.png" width="30%" >
+      </div>
+      <div class="col">
+      <div  class="presentation" >
         <h2>Kafka</h2>
         <p>Started with REST, Kafka gives much more stable backbone.</p>
 
         </div>
     </div>
-
-  </main><!-- /.container -->
+    <div class="subFooter" >
+        <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
+    </div>
+        </div>
