--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,63 +1,101 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="#">Demojam</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarsExampleDefault"
+    aria-controls="navbarsExampleDefault"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" [class.active]="router.url==='/controls'">
-        <a class="nav-link" (click)="controls()">Game controls <span class="sr-only">(current)</span></a>
+      <li class="nav-item" [class.active]="router.url === '/controls'">
+        <a class="nav-link" (click)="controls()"
+          >Game controls <span class="sr-only">(current)</span></a
+        >
       </li>
-      <li class="nav-item"  [class.active]="router.url==='/page1' || router.url==='/core-sub'">
+      <li
+        class="nav-item"
+        [class.active]="router.url === '/page1' || router.url === '/core-sub'"
+      >
         <a class="nav-link" (click)="coreEngine()">Core engine</a>
       </li>
-      <li class="nav-item"  [class.active]="router.url==='/page2'">
-          <a class="nav-link" (click)="twitter()">Twitter engine</a>
-        </li>
-        <li class="nav-item"  [class.active]="router.url==='/page3'">
-            <a class="nav-link" (click)="cqrs()">CQRS</a>
-          </li>
-          <li class="nav-item"  [class.active]="router.url==='/page4'">
-              <a class="nav-link" (click)="api()">Kafka</a>
-            </li>
-
-
+      <li class="nav-item" [class.active]="router.url === '/page2'">
+        <a class="nav-link" (click)="twitter()">Twitter engine</a>
+      </li>
+      <li class="nav-item" [class.active]="router.url === '/page3'">
+        <a class="nav-link" (click)="cqrs()">CQRS</a>
+      </li>
+      <li class="nav-item" [class.active]="router.url === '/page4'">
+        <a class="nav-link" (click)="api()">Kafka</a>
+      </li>
     </ul>
-
   </div>
 </nav>
 
-
 <div style="margin-top: 80px">
-<router-outlet ></router-outlet>
-</div>
-<footer class="footer">
-  <div class="container">
-    <div class="row ">
-      <div class="col">
-          <div class="row ">
-              <h6><b>Game Status: </b><span style="color:green" *ngIf="gameService.gameInProgress">Started</span><span style="color:red" *ngIf="!gameService.gameInProgress">Stopped</span> </h6>
-            </div>
-            <div class="row " *ngIf="gameService.gameInProgress">
-                <h6><b>Round Number: </b> {{gameService.round}} </h6>
-              </div>
-
+  <div class="row ">
+    <div class="col-9">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-3" class="sidebar">
+      <div class="quote">
+        <h6>Open Twitter and follow the hashtag: <b>#QUARKUS</b></h6>
+        <h6>Respond to live tweets to with your guess to win cool prizes.</h6>
       </div>
 
-
-      <div class="col-6">
-          <h6 *ngIf="gameService.gameInProgress"><b>Current Quote:</b> {{gameService.quote}}</h6>
+      <div  style="margin-top: 30px;">
+        <h6>
+          <b>Game Status: </b
+          ><span style="color:green" *ngIf="gameService.gameInProgress"
+            >Started</span
+          ><span style="color:red" *ngIf="!gameService.gameInProgress"
+            >Stopped</span
+          >
+        </h6>
+      </div>
+      <div  *ngIf="gameService.gameInProgress">
+        <h6><b>Round Number: </b> {{ gameService.round }}</h6>
       </div>
 
+      <div >
+        <h6 *ngIf="gameService.gameInProgress"><b>Current Quote:</b></h6>
+      </div>
+      <div class=" quote">
+        <h6 *ngIf="gameService.gameInProgress">{{ gameService.quote }}</h6>
+      </div>
 
-
-        <div class="col">
-            <h6 *ngIf="gameService.gameInProgress"><b>Number of entries:</b> {{gameService.entries}}</h6>
+      <div class="">
+        <h6 *ngIf="gameService.gameInProgress">
+          <b>Number of entries:</b> {{ gameService.entries }}
+        </h6>
+      </div>
+      <div class="">
+          <h6 *ngIf="gameService.gameInProgress">
+            <b>Latest participant:</b> {{ gameService.latestEntry }}
+          </h6>
         </div>
+    </div>
+  </div>
 </div>
 
-  </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
- <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"
+></script>
+<script>
+  window.jQuery ||
+    document.write(
+      '<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>'
+    );</script
+><script
+  src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+  crossorigin="anonymous"
+></script>
