--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
   background-color: #f5f5f5;
 }
 .subFooter {
-  position: absolute;
+  position: fixed;
   text-align: right;
   bottom: 0;
   width: 70%;
@@ -39,11 +39,13 @@ body {
 }
 
 .presentation {
-  background-color: #a30000;
-  border:#820000 2px solid;
-  padding:5px;
-  margin-left:10px;
-  color: white;
+  /* background-color: grey; */
+  /* border:#820000 2px solid; */
+  padding:20px;
+  /* color: white; */
+  padding-bottom: 10px;
+
+  width:100%;
 }
 .presentation p {
   font-size: 30px
@@ -56,4 +58,26 @@ body {
   float:left;
   padding:10px;
   width:600px
+}
+
+.sidebar {
+  height:700px;
+  width:23%;
+  text-align: center;
+  background-color: aliceblue
+
+
+
+}
+
+.sidebar h6 {
+  font-size:30px;
+}
+
+.quote {
+
+  color: darkred;
+
+  text-align: center;
+  font-size:20px;
 }
