--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
 
 
     <div class="row ">
-      <div class="col">
-    <img src="../../assets/shakespeare.png" height="500px">
+      <div class="col-5">
+    <img  style="padding-left:10px" src="../../assets/shakespeare.png" height="500px">
       </div>
-      <div class="col">
+      <div class="col-7">
     <div  class="presentation">
       <h2 >Shakespeare Schwarzenegger Hamilton</h2>
       <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.<br>This makes them easier to develop and amenable to change</h4>
