--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,8 @@ body {
   height:700px;
   width:23%;
   text-align: center;
-  background-color: aliceblue
+  background-color: aliceblue;
+  border: 1px solid darkblue;
 
 
 
@@ -80,4 +81,10 @@ body {
 
   text-align: center;
   font-size:20px;
+}
+
+.header {
+  background-color: rgb(99, 30, 13);
+  color: beige;
+  padding-bottom: 10px;
 }
