--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,11 @@ body {
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
 .footer {
-  padding-top:10px;
-  position: absolute;
+  /* padding:10px; */
+  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 100px; /* Set the fixed height of the footer here */
+  /* height: 50px; Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
@@ -87,4 +87,8 @@ body {
   background-color: rgb(99, 30, 13);
   color: beige;
   padding-bottom: 10px;
+}
+
+.modal-body {
+  font-size: 24px;
 }
