--- a/src/app/page3/page3.component.html
+++ b/src/app/page3/page3.component.html
@@ -6,12 +6,17 @@
         <div class="row">
           <div class="col">
 
-    <img src="../../assets/cqrs.png" width="500px">
+    <img src="../../assets/cqrs.png" width="500px"  style="padding-left:10px">
     </div>
     <div class="col">
     <div  class="presentation " >
       <p>Command Query Responsibility Segregation</p>
-      <p>Different model to update information than the model you use to read information</p>
+      <p>The idea that you can use a different model to update information than the model you use to read the information</p>
+      <p>In this context</p>
+      <ul>
+        <li>Commands = Writes</li>
+        <li>Queries = Reads</li>
+      </ul>
 
     </div>
     </div>
