Made images responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,12 @@
 
     <div class="row ">
       <div class="col-5">
-    <img  style="padding-left:10px" src="../../assets/shakespeare.png" height="400px">
+    <img  style="padding-left:10px" src="../../assets/shakespeare.png" style="max-width:100%;
+    height:auto;">
       </div>
       <div class="col-7">
     <div  class="presentation">
-      <h2 >Shakespeare Schwarzenegger Hamilton</h2>
+      <h2 >Shakespeare, Swartzenegger and Hamilton or Supersonic, Reactive Java Microservices (with Twitter)</h2>
       <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.<br>This makes them easier to develop and amenable to change</h4>
       <ul >
         <li>Responsive</li>
