--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -7,7 +7,8 @@
 
           <div class="row">
             <div class="col">
-            <img src="../../assets/core.png" height="400px" >
+            <img src="../../assets/core.png" style="max-width:100%;
+            height:auto;" >
           </div>
           <div class="col">
             <div class="presentation " >
