--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -8,7 +8,8 @@
           <div class="row">
             <div class="col">
 
-                      <img src="../../assets/twitter.jpg" height="300px" style="padding-left:10px">
+                      <img src="../../assets/twitter.jpg" style="max-width:100%;
+                      height:auto;padding-left:10px">
                     </div>
             <div  class="col presentation" >
               <h2 >Twitter engine</h2>
