--- a/src/app/page3/page3.component.html
+++ b/src/app/page3/page3.component.html
@@ -6,7 +6,8 @@
         <div class="row">
           <div class="col">
 
-    <img src="../../assets/cqrs.png" width="500px"  style="padding-left:10px">
+    <img src="../../assets/cqrs.png"   style="max-width:100%;
+    height:auto;padding-left:10px">
     </div>
     <div class="col">
     <div  class="presentation " >
