--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -6,7 +6,8 @@
         <div class="row">
           <div class="col">
 
-      <img src="../../assets/apache-kafka.png" width="30%" >
+      <img src="../../assets/apache-kafka.png" style="max-width:100%;
+      height:auto;" >
       </div>
       <div class="col">
       <div  class="presentation" >
