--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -12,17 +12,20 @@
                       height:auto;padding-left:10px">
                     </div>
             <div  class="col presentation" >
-              <h2 >Twitter engine</h2>
-              <h4 >Twitter is a domain, a technical space</h4>
-              <p>Additional domains can be brought online independently</p>
+              <h2 >DDD and EDA</h2>
+              <h4 >Concepts</h4>
               <ul>
-                <li>Slack</li>
-                <li>Google Chat</li>
-                <li>LinkedIn</li>
-                <li>Skype</li>
+                <li>Domains and Infrastructure</li>
+                <li>Events</li>
+              </ul>
+              <h4 >Products</h4>
+              <ul>
+                <li>Open Innovation Labs</li>
+                <li>AMQ Streams</li>
+                <li>Quarkus</li>
 
               </ul >
-                <p>If we had the luxury of more time, we'd bring another channel on live during the demo</p>
+
             </div>
           </div>
 
