--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -7,19 +7,14 @@
 
           <div class="row">
             <div class="col">
-            <img src="../../assets/core.png" style="max-width:100%;
-            height:auto;" >
+            <img src="../../assets/labs.png" style="max-width:100%;
+            height:auto; padding-left: 10px" >
           </div>
           <div class="col">
             <div class="presentation " >
-              <h2 >Core engine</h2>
-              <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.</h4>
-              <ul >
-                <li>Built using hexagonal architecture</li>
-                <li>Easy to adapt new integrations, easily add new pieces</li>
-                <li>Reactive, using RESTful, Kafka makes it easy</li>
-                  <li>Additional channels could be brought online</li>
-                </ul>
+              <h2 >Impact Mapping</h2>
+              <h4 >Coming out of Red Hat Innovation Labs.</h4>
+
             </div>
           </div>
           </div>
