--- a/src/app/page3/page3.component.html
+++ b/src/app/page3/page3.component.html
@@ -6,18 +6,24 @@
         <div class="row">
           <div class="col">
 
-    <img src="../../assets/cqrs.png"   style="max-width:100%;
+    <img src="../../assets/core.png"   style="max-width:100%;
     height:auto;padding-left:10px">
     </div>
     <div class="col">
     <div  class="presentation " >
-      <p>Command Query Responsibility Segregation</p>
-      <p>The idea that you can use a different model to update information than the model you use to read the information</p>
-      <p>In this context</p>
-      <ul>
-        <li>Commands = Writes</li>
-        <li>Queries = Reads</li>
-      </ul>
+        <h2 >Hexagonal architecture</h2>
+        <h4 >Concepts</h4>
+        <ul>
+          <li>Adaptable endpoints</li>
+
+        </ul>
+        <h4 >Products</h4>
+        <ul>
+          <li>Quarkus</li>
+          <li>NodeJS</li>
+          <li>Keycloak</li>
+
+        </ul >
 
     </div>
     </div>
