--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -1,34 +1,42 @@
 <div class="starter-template">
-    <div >
-
-
-
-        <div class="row">
-          <div class="col">
-              <img src="../../assets/quarkus.png" style="max-width:100%;
-              height:auto;" >
-      <img src="../../assets/apache-kafka.png" style="max-width:100%;
-      height:auto;" >
-
+  <div>
+    <div class="row">
+      <div class="col">
+        <img
+          src="../../assets/quarkus.png"
+          style="max-width:100%;
+              height:auto;"
+        />
+        <img
+          src="../../assets/apache-kafka.png"
+          style="max-width:100%;
+      height:auto;"
+        />
       </div>
       <div class="col">
-      <div  class="presentation" >
-        <h2>REST and Streams</h2>
-        <h4 >Concepts</h4>
-              <ul>
-                <li>Minimum Viable Product/Easy first</li>
-                <li>Competitive against Confluent or Spring’s dogmatism</li>
-              </ul>
-              <h4 >Products</h4>
-              <ul>
-                <li>AMQ Streams</li>
-                <li>Quarkus</li>
-
-              </ul >
-
+        <div class="presentation">
+          <h2>REST and Streams</h2>
+          <h4>Concepts</h4>
+          <ul>
+            <li>Minimum Viable Product/Easy first</li>
+            <li>Competitive against Confluent or Spring’s dogmatism</li>
+          </ul>
+          <h4>Products</h4>
+          <ul>
+            <li>AMQ Streams</li>
+            <li>Quarkus</li>
+          </ul>
         </div>
+      </div>
+      <div class="subFooter">
+        <button
+          type="button"
+          class="btn btn-primary btn-lg"
+          (click)="nextPage()"
+        >
+          Next
+        </button>
+      </div>
     </div>
-    <div class="subFooter" >
-        <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
-    </div>
-        </div>
+  </div>
+</div>
