--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -4,7 +4,8 @@
 
     <div class="row">
       <div class="col" class="presentation">
-        <p class="lead"  >Welcome to Shakespeare Schwarzenegger Hamilton</p>
+        <p class="lead"  >Game controls</p>
+        <p>Self contained sales tool and interactive reactive game engine</p>
         <!-- <p>Purpose of the game?<br>To engage people in the room<br>
           <ul>
             <li>Built using impact mapping</li>
