Update to content

--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -4,12 +4,12 @@
       <div class="col">
         <img
           src="../../assets/quarkus.png"
-          style="max-width:100%;
-              height:auto;"
+          style="max-width:80%;
+              height:auto; padding-left: 20px"
         />
         <img
-          src="../../assets/apache-kafka.png"
-          style="max-width:100%;
+          src="../../assets/kafka_diagram.png"
+          style="max-width:80%; padding-left: 20px;
       height:auto;"
         />
       </div>
