Update to content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
     <div class="row ">
       <div class="col-5">
-    <img  style="padding-left:10px" src="../../assets/shakespeare.png" style="max-width:100%;
+    <img  src="../../assets/shakespeare.png" style="padding-left:10px;max-width:100%;
     height:auto;">
       </div>
       <div class="col-7">
