Update to content

--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col" class="presentation">
         <p class="lead"  >Game controls</p>
-        <p>Self contained sales tool and interactive reactive game engine</p>
+        <p>Combined sales tool and interactive reactive game engine</p>
         <!-- <p>Purpose of the game?<br>To engage people in the room<br>
           <ul>
             <li>Built using impact mapping</li>
