Update to content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,9 @@
         <li>Resilient</li>
         <li>Elastic</li>
         <li>Message driven</li>
-
+      </ul>
+      <h4>Resulting in:</h4>
+      <ul>
           <li>Reduced Time to Market</li>
           <li>Cost reduction</li>
           <li>Better Systems for Customers</li>
