--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ body {
 }
 .presentation li{
 
-  font-size: 30px
+  font-size: 24px
 }
 .pres-left {
   float:left;
@@ -66,6 +66,7 @@ body {
   text-align: center;
   background-color: aliceblue;
   border: 1px solid darkblue;
+  padding:10px
 
 
 
