Update to content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,7 +104,7 @@
 </ng-template>
 <footer class="footer">
   <img src="../assets/red-hat-logo.png" height="50"> Red Hat DemoJam Tech Exchange North America 2019
-  <div style="float: right; padding-right:10px">Shakespeare, Swartzenegger and Hamilton or Supersonic, Reactive Java Microservices (with Twitter)</div>
+  <div style="float: right; padding-right:10px">Shakespeare, Schwarzenegger and Hamilton or Supersonic, Reactive Java Microservices (with Twitter)</div>
 </footer>
 
 
