--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,11 @@
       </div>
       <div class="col-7">
     <div  class="presentation">
-      <h2 >Shakespeare, Swartzenegger and Hamilton or Supersonic, Reactive Java Microservices (with Twitter)</h2>
-      <h4 >Systems built as Reactive Systems are more flexible, loosely-coupled and scalable.<br>This makes them easier to develop and amenable to change</h4>
+      <h2 >Shakespeare, Schwarzenegger and Hamilton</h2><span style="font-size:24px"> or... Supersonic, Reactive Java Microservices (with Twitter)</span>
+      <br><br>
+      <H2>Reactive Systems are more flexible, loosely-coupled and scalable</H2>
+        <h3>This makes them easier to develop and amenable to change</h3>
+        <h4>They are:</h4>
       <ul >
         <li>Responsive</li>
         <li>Resilient</li>
