--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -4,8 +4,11 @@
 
     <div class="row">
       <div class="col" class="presentation">
-        <p class="lead"  >Game controls</p>
+
         <p>Combined sales tool and interactive reactive game engine</p>
+        <p>It's live.  It works.<br>
+        Deadline? add a timer?<br>
+        No deadline? add additional channels.</p>
         <!-- <p>Purpose of the game?<br>To engage people in the room<br>
           <ul>
             <li>Built using impact mapping</li>
