--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -16,7 +16,7 @@
             <li> Change development paradigms</li>
           </ul> -->
 
-            <p>To start a new game, click on the "Start Game" button</p>
+            <p>Start a new game? Click the button!</p>
             <div class="col">
                 <button type="button" class="btn btn-primary btn-lg" [hidden]="gameService.gameInProgress" (click)="startGame()">Start Game</button>
 
