Update to content

--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -12,7 +12,7 @@
                       height:auto;padding-left:10px">
                     </div>
             <div  class="col presentation" >
-              <h2 >DDD and EDA</h2>
+              <h2 >Domain Driven Design and Event Driven Architecture</h2>
               <h4 >Concepts</h4>
               <ul>
                 <li>Domains and Infrastructure</li>
