Update to content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,8 @@
     </div>
     <div class="col-3" class="sidebar">
       <div class="quote header">
-        <h6>Open Twitter and follow the hashtag: <b>#QUARKUS</b></h6>
+        <h6>Open Twitter and follow user: <b>@jbossdemo</b></h6>
+        <h5>Tweets containing hashtag #quarkus</h5>
         <h6>Respond to live tweets to win cool prizes.</h6>
       </div>
 
