Update to content

--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col" class="presentation">
 
-        <p>Combined sales tool and interactive reactive game engine</p>
+        <p>Sales tool and interactive reactive game engine</p>
         <p>It's live.  It works.<br>
-        Deadline? add a timer?<br>
+        Deadline? add a timer.<br>
         No deadline? add additional channels.</p>
         <!-- <p>Purpose of the game?<br>To engage people in the room<br>
           <ul>
