--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,11 +71,11 @@
         <h6 *ngIf="gameService.gameInProgress && gameService.quote">"{{ gameService.quote }}"</h6>
       </div>
 
-      <!-- <div class="">
+      <div class="">
         <h6 *ngIf="gameService.gameInProgress">
           <b>Number of entries:</b> {{ gameService.entries }}
         </h6>
-      </div> -->
+      </div>
       <!-- <div class="">
           <h6 *ngIf="gameService.gameInProgress">
             <b>Latest participant:</b> {{ gameService.latestEntry }}
