Added some entries

--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -7,16 +7,16 @@
 
           <div class="row">
             <div class="col">
-            <img src="../../assets/labs.png" style="max-width:100%;
+            <img src="../../assets/impact.png" style="max-width:70%;
             height:auto; padding-left: 10px" >
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="presentation " >
               <h2 >Impact Mapping</h2>
               <h4 >Coming out of Red Hat Innovation Labs.</h4>
 
             </div>
-          </div>
+          </div> -->
           </div>
 
         </div>
