--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -8,10 +8,10 @@
           <div class="row">
             <div class="col">
 
-                      <img src="../../assets/twitter.jpg" style="max-width:100%;
+                      <img src="../../assets/ddd.png" style="max-width:70%;
                       height:auto;padding-left:10px">
                     </div>
-            <div  class="col presentation" >
+            <!-- <div  class="col presentation" >
               <h2 >Domain Driven Design and Event Driven Architecture</h2>
               <h4 >Concepts</h4>
               <ul>
@@ -26,7 +26,7 @@
 
               </ul >
 
-            </div>
+            </div> -->
           </div>
 
 
