Added some entries

--- a/src/app/page3/page3.component.html
+++ b/src/app/page3/page3.component.html
@@ -6,11 +6,11 @@
         <div class="row">
           <div class="col">
 
-    <img src="../../assets/core.png"   style="max-width:100%;
+    <img src="../../assets/hex.png"   style="max-width:70%;
     height:auto;padding-left:10px">
     </div>
-    <div class="col">
-    <div  class="presentation " >
+    <!-- <div class="col"> -->
+    <!-- <div  class="presentation " >
         <h2 >Hexagonal architecture</h2>
         <h4 >Concepts</h4>
         <ul>
@@ -25,8 +25,8 @@
 
         </ul >
 
-    </div>
-    </div>
+    </div> -->
+    <!-- </div> -->
     <div class="subFooter" >
         <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
     </div>
