--- a/src/app/core-sub/core-sub.component.html
+++ b/src/app/core-sub/core-sub.component.html
@@ -1,14 +1,39 @@
-<main role="main" class="container">
-
-    <div class="starter-template">
-      <h1>Page1</h1>
-      <p class="lead">Core Engine</p>
-
-      <div class="subFooter" >
-          <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
-      </div>
-      </div>
 
 
-  </main><!-- /.container -->
+  <div class="starter-template">
+      <div  >
+
+
+
+          <div class="row">
+
+          <div class="col">
+            <div class="presentation " >
+              <h2>Business Benefits</h2>
+              <p>Speed of change/releasing new features.<br>
+                  Scale due to endpoints and data volume
+                  </p>
+              <h2 >Products</h2>
+              <ul>
+                <li>Red Hat Open Innovation Labs</li>
+                <li>AMQ Streams</li>
+                <li>Quarkus</li>
+                <li>Node.js RHOAR</li>
+                <li>OpenShift</li>
+                <li>Keycloak</li>
+                <li>RHEL</li>
+                <li>UBI</li>
+              </ul>
+
+            </div>
+          </div>
+          </div>
+
+        </div>
+
+    <div class="subFooter" >
+        <button type="button" class="btn btn-primary btn-lg" (click)="nextPage()">Next</button>
+    </div>
+    </div>
+
 
