--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -3,17 +3,17 @@
     <div class="row">
       <div class="col">
         <img
-          src="../../assets/kafka_diagram.png"
-          style="max-width:80%; padding-left: 20px;
+          src="../../assets/kafka.png"
+          style="max-width:70%; padding-left: 20px;
       height:auto;"
         />
-        <img
+        <!-- <img
           src="../../assets/quarkus.png"
           style="max-width:80%;
               height:auto; padding-left: 20px"
-        />
+        /> -->
       </div>
-      <div class="col">
+      <!-- <div class="col">
         <div class="presentation">
           <h2>REST and Streams</h2>
           <h4>Concepts</h4>
@@ -27,7 +27,7 @@
             <li>Quarkus</li>
           </ul>
         </div>
-      </div>
+      </div> -->
       <div class="subFooter">
         <button
           type="button"
